--- a/template/freshservice/connector-apps/your_first_connector_app/app/index.html
+++ b/template/freshservice/connector-apps/your_first_connector_app/app/index.html
@@ -138,7 +138,7 @@
             <div class="fields-display-area hide">
               <div class="disply-header fw-type-base fw-type-semibold fw-mb-16">Sample illustration of sampleapp widget</div>
               <div class="app-widget" id="widget-shown">
-                <img src="./assets/images/fetched_data.svg" alt="fetched data" >
+                <!-- <img src="./assets/images/fetched_data.svg" alt="fetched data" > Add the SVG file to show the sample fetched data in the widget in the app placeholder. -->
                 <div class="info-pointer">
                   <div class="pointer-arrow-up"></div>
                   <div class="pointer-arrow-line"></div>
@@ -187,7 +187,7 @@
                     <p>Enable pre-built recipes</p>
                   </div>
                   <div class="content-body">
-                    <img src="./assets/images/wf-preview.svg" alt="workflows"/>
+                    <!-- <img src="./assets/images/wf-preview.svg" alt="workflows"/> Add the svg file for the workflow preview in the app settings page. -->
                     <p class="sec-info">Use pre-built recipes to activate workflows between sampleapp and Freshservice.</p>
                   </div>
                 </li>
