--- a/template/freshservice/connector-apps/workato_background_connector/config/iparams.html
+++ b/template/freshservice/connector-apps/workato_background_connector/config/iparams.html
@@ -15,6 +15,7 @@
     <div id="configure-tabs">
       <fw-tab slot="tab" panel="connect-fs" active-tab-index="0" id="connect-fs-tab">1. Connect Freshservice</fw-tab>
       <fw-tab slot="tab" panel="connect-wk" active-tab-index="1" id="connect-sampleapp-tab" disabled>2. Connect sampleapp</fw-tab>
+      <fw-tab slot="tab" panel="alert-conf" active-tab-index="2" id="alert-conf-tab" disabled>3. Alerts</fw-tab>
     </div>
     <fw-tab-panel name="connect-fs">
       <div class="fw-main-container">
@@ -55,9 +56,44 @@
       </div>
       
       <div id="sampleApp-connection-footer" class="fw-mt-24">
-        <fw-inline-message open type="info" closable="false">
-          <div class="connection-success-info">Click <span class="fw-type-semibold">Install</span> below once the connection is successful.</div>
-        </fw-inline-message>
+        <fw-button color="primary" class="button-alignment" id="sampleapp-next"> Next </fw-button>
+      </div>
+    </fw-tab-panel>
+
+    <fw-tab-panel name="alert-conf">
+      <div class="fw-main-container">
+
+        <fw-spinner size="medium" color="#2C5CC5" id="alert-conf-loader" class="loader-icon"></fw-spinner>
+
+        <div id="alert-conf-content">
+          <div class="alert-pref">
+            <fw-toggle size="medium" class="alerts-toggle" id="alerts-toggle"></fw-toggle>
+          </div>
+          <div class="alert-desc">
+            <div class="header"> Alerts </div>
+            <div class="desc"> Activate Alerts to promptly receive email notifications for any errors detected within the Recipes configured in this app. </div>
+          </div>
+  
+          <div class="field">
+            <fw-select
+              id="email-select"
+              class="email-select"
+              label="Email ID"
+              no-data-text="Type to search.."
+              hint-text="Add multiple email addresses (upto 5)."
+              caret="false"
+              max="5"
+              multiple
+              required
+            >
+            </fw-select>
+          </div>
+        </div>
+        <div id="sampleApp-connection-footer" class="fw-mt-24">
+          <fw-inline-message open type="info" closable="false" id="install-info">
+            <div class="connection-success-info">Click <span class="fw-type-semibold">Install</span> below to complete the installation.</div>
+          </fw-inline-message>
+        </div>
       </div>
     </fw-tab-panel>
   </fw-tabs>
@@ -80,6 +116,11 @@
       fs_apikey: "#fs-apikey"
   };
   var authInfo, isConnected = false;
+  var isAlertConfigFetched = false;
+  var alertPref = false;
+  var notifiedAgents = [];
+  var isAppInstalled = false;
+  var alertRecipeConnParams = [];
 
   async function getConfigs(savedConfigs) {
     var authInfoData = {
@@ -96,12 +137,14 @@
     ls.client_secret = savedConfigs.SampleAppApiKey;
     ls.storedConfiguration = savedConfigs;
     window.savedConfigs = savedConfigs;
+    isAppInstalled = true;
     appendInputValues();
   }
 
   function appendInputValues() {
-      $(elements.fs_domain).val(savedConfigs.url);
-      $(elements.fs_apikey).val(savedConfigs.api_key);
+    $(elements.fs_domain).val(savedConfigs.url);
+    $(elements.fs_apikey).val(savedConfigs.api_key);
+    $('#install-info').hide();
   }
 
   function postConfigs() {
@@ -176,6 +219,7 @@
             jQuery('.loading-hint, #tenant-loading').addClass('hide');
             if(error.status == 403) {
               jQuery('.feature-error, #create-tenant').removeClass('hide');
+              jQuery('.feature-error').text(JSON.parse(error.response).message);
             } else {
               jQuery('.connection-error, #create-tenant').removeClass('hide');
             }
@@ -240,15 +284,63 @@
       }
   }
 
-  async function validate() {
+  async function validateConnections() {
     try {
       var connectionInfo = await getConnections(ls);
       var connections = JSON.parse(connectionInfo.response);
       var isFsConnected = getFSConnection(connections)[0].authorization_status == 'success';
-      var isSampleAppConnected = connections.find(function(connection){ return connection.provider.includes('sample_app') }).authorization_status == 'success'; // app name should be the workato app name.
+      var isSampleAppConnected = connections.find(function(connection){ return connection.provider.includes('sample_app') }).authorization_status == 'success';
+      
+      setAlertRecipeConnParams(connections);
       return isFsConnected && isSampleAppConnected;
     } catch(error) {
       console.log(error);
+      return false;
+    }
+  }
+
+  function setAlertRecipeConnParams(connections) {
+    alertRecipeConnParams = connections.filter(c => c.provider == 'rest' || c.provider == 'workato_app').map(c => {
+      return {
+        id: c.id,
+        provider: c.provider
+      }
+    })
+  }
+
+  async function validate() {
+    try {
+      var isConnectionsValid = await validateConnections();
+      if(!isConnectionsValid) {
+        return false;
+      }
+
+      var isAlertsPageActive = jQuery('#app-tabs').attr('active-tab-index') === '2';
+      if(isAppInstalled && !isAlertsPageActive) {
+        return true;
+      } else if(!isAlertsPageActive) {
+        activateAlertsPage();
+        return false;
+      }
+
+      const emailSelect = document.getElementById('email-select');
+      var notifiedAgentIds = emailSelect.value;
+      if(alertPref && notifiedAgentIds.length === 0 || notifiedAgentIds.length > 5) {
+        emailSelect.state = 'error';
+        emailSelect.errorText = notifiedAgentIds.length === 0 ? 'This field is required.' : 'Can not select more then 5.';
+
+        return false;
+      }
+
+      try {
+        await updateAlertConfig(ls, { pref: alertPref, users: notifiedAgentIds }, alertRecipeConnParams);
+      } catch (alertUpdateError) {
+        notify('Alert configuration update failed.', 'error');
+        console.log(alertUpdateError);
+      }
+
+      return true;
+    } catch(error) {
       return false;
     }
   }
@@ -273,12 +365,44 @@
   });
 
   function init() {
-      var {
-          validateBtn,
-          fs_domain
-      } = elements;
-      $(validateBtn).on("click", checkValidation);
-      $(fs_domain).val(window.parent.location ? window.parent.location.hostname : '');
+      $('#validate').on("click", checkValidation);
+
+      $("#sampleapp-next").on('click', async function() {
+        var isConnectionsValid = await validateConnections();
+        if(isConnectionsValid) {
+          activateAlertsPage();
+        } else {
+          notify('Connect SampleApp to proceed.', 'error');
+        }
+      });
+  }
+
+  function activateAlertsPage() {
+    $('[panel="alert-conf"]').removeAttr('disabled');
+    switchTab(2);
+    initAlertsHandler();
+  }
+
+  async function initAlertsHandler() {
+    $('#alert-conf-loader').show();
+    $('#alert-conf-content').hide();
+
+    if(!isAlertConfigFetched) {
+      try {
+        const data = await fetchAlertConfig(authInfo);
+        const preference = JSON.parse(data.response);
+        if(preference['pref'] && preference['users']) {
+          alertPref = preference.pref;
+          notifiedAgents = preference.users;
+        }
+        isAlertConfigFetched = true;
+      } catch (err) {
+        notify('Alert configuration fetch failed.', 'error');
+        console.log(err);
+      }
+    }
+    
+    loadAlertConfPage();
   }
 </script>
 
