added TODO and updated readme

--- a/template/freshservice/connector-apps/workato_background_connector/app/index.html
+++ b/template/freshservice/connector-apps/workato_background_connector/app/index.html
@@ -139,6 +139,7 @@
           </div>
           <div class="modal-footer quick-help-modal-footer">
             <div>
+              <!-- TODO: Update the article -->
               <a href="https://support.freshservice.com/en/support/solutions/articles/50000006196" class="button-link" rel="noopener noreferrer" target="_blank">View Detailed Guide</a>
             </div>
             <fw-button color="primary" data-bs-dismiss="modal">Got it</fw-button>
