--- a/template/freshservice/connector-apps/workato_background_connector/config/iparams.html
+++ b/template/freshservice/connector-apps/workato_background_connector/config/iparams.html
@@ -48,6 +48,7 @@
     <fw-tab-panel name="connect-wk">
       <div class="fw-main-container">
         <fw-inline-message id="data-center-info" class="hide fw-mb-12" open type="info" closable="false">
+          <!-- TODO: Update the article -->
           Note: This App will securely process your data via <a href="https://support.freshservice.com/en/support/solutions/articles/50000006196" rel="noreferrer noopener" target="_blank">Data Centers in the US</a>
         </fw-inline-message>
         <div class="iframe-container">
@@ -231,7 +232,7 @@
     try {
       var tenantInfo = await fetchTenant(authInfo);
       var response = JSON.parse(tenantInfo.response);
-      var connection = response.connections.find(function(connection){ return connection.provider.includes('sample_app') }); // this should be the name of the connector app in workato side. 
+      var connection = response.connections.find(function(connection){ return connection.provider.includes('sample_app') }); // TODO: this should be the name of the connector app in workato side.
       var connectId = connection.id;
       isConnected = connection.authorization_status == 'success';
       ls.isFsValid = true;
@@ -289,7 +290,7 @@
       var connectionInfo = await getConnections(ls);
       var connections = JSON.parse(connectionInfo.response);
       var isFsConnected = getFSConnection(connections)[0].authorization_status == 'success';
-      var isSampleAppConnected = connections.find(function(connection){ return connection.provider.includes('sample_app') }).authorization_status == 'success';
+      var isSampleAppConnected = connections.find(function(connection){ return connection.provider.includes('sample_app') }).authorization_status == 'success'; // TODO: this should be the name of the connector app in workato side.
       
       setAlertRecipeConnParams(connections);
       return isFsConnected && isSampleAppConnected;
