--- a/template/freshservice/connector-apps/workato_background_connector/config/assets/css/iparams.css
+++ b/template/freshservice/connector-apps/workato_background_connector/config/assets/css/iparams.css
@@ -123,7 +123,7 @@ input.error {
   margin-top: 12px;
 }
 
-#connect-sampleApp {
+#connect-sample-app {
   margin-left: auto;
 }
 .iframe-container {
@@ -142,7 +142,7 @@ iframe {
   color: #475867;
   font-size: 14px;
 }
-#sampleApp-connection-footer {
+#sample-app-connection-footer {
   width: 930px;
   display: inline-flex;
 }
