Background connector template

--- a/template/freshservice/connector-apps/workato_background_connector/config/iparams.html
+++ b/template/freshservice/connector-apps/workato_background_connector/config/iparams.html
@@ -327,6 +327,7 @@
     try {
       var isConnectionsValid = await validateConnections();
       if(!isConnectionsValid) {
+        notify('Please click "Next" before install or save.', 'error');
         return false;
       }
 
