--- a/template/freshservice/connector-apps/workato_background_connector/app/index.html
+++ b/template/freshservice/connector-apps/workato_background_connector/app/index.html
@@ -130,7 +130,7 @@
                     <p>Enable pre-built recipes</p>
                   </div>
                   <div class="content-body">
-                    <img src="./assets/images/wf-preview.svg" alt="workflows"/>
+                    <img src="./assets/images/wf-preview.svg" alt="workflows" width="760" height="159" />
                     <p class="sec-info">Use pre-built recipes to activate workflows between sampleapp and Freshservice.</p>
                   </div>
                 </li>
