Connector app with widget template

--- a/template/freshservice/connector-apps/your_first_connector_app/app/index.html
+++ b/template/freshservice/connector-apps/your_first_connector_app/app/index.html
@@ -225,7 +225,7 @@
           </div>
           <div class="modal-body">
             <div id="modal-content">
-              By clicking disable, requester information from sampleapp will not be displayed in the widget on the ticket details page.
+              By clicking disable, ticket information from sampleapp will not be displayed in the widget on the ticket details page.
             </div>
           </div>
           <div class="modal-footer widget-footer">
