--- a/template/freshservice/connector-apps/workato_background_connector/app/index.html
+++ b/template/freshservice/connector-apps/workato_background_connector/app/index.html
@@ -130,7 +130,8 @@
                     <p>Enable pre-built recipes</p>
                   </div>
                   <div class="content-body">
-                    <!-- TODO: <img src="./assets/images/wf-preview.svg" alt="workflows" width="760" height="159" /> Add the svg file for the workflow preview in the app settings page. -->
+                    <!-- TODO: Add the svg file below for the workflow preview in the app settings page. -->
+                    <img src="./assets/images/wf-preview.svg" alt="workflows" width="760" height="159" />
                     <p class="sec-info">Use pre-built recipes to activate workflows between sampleapp and Freshservice.</p>
                   </div>
                 </li>
